syntax = "proto3";

import "auth/user_token.proto";

package tenantProfile;

service TenantProfileService {
    rpc FindTenantProfileByTenantId(FindTenantProfileByTenantIdRequest) returns (TenantProfileResponse);
}

message TenantProfile {
    string id = 1;
    string tenant_id = 2;
    string email = 3;
    string service_name = 4;
    string address = 5;
    string phone_number = 6;
    string logo = 7;
    string description = 8;
    string facebook_url = 9;
    string instagram_url = 10;
    string youtube_url = 11;
    string created_at = 12;
    string updated_at = 13;
} 


message FindTenantProfileByTenantIdRequest {
    string domain = 1;
    string tenant_id = 2;
} 

message TenantProfileResponse {
    TenantProfile tenant_profile = 1;
}
